fixed accounts controller test

--- a/test/dummy/app/views/accounts/edit.html.erb
+++ b/test/dummy/app/views/accounts/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @account %> |
-<%= link_to 'Back', accounts_path %>
+<%= link_to 'Show', client_account_path(@account) %> |
+<%= link_to 'Back', client_accounts_path(@client) %>
