--- a/test/dummy/app/views/accounts/show.html.erb
+++ b/test/dummy/app/views/accounts/show.html.erb
@@ -6,5 +6,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_account_path(@account) %> |
-<%= link_to 'Back', accounts_path %>
+<%= link_to 'Edit', edit_client_account_path(@account) %> |
+<%= link_to 'Back', client_accounts_path(@client) %>
