--- a/test/dummy/app/views/accounts/_form.html.erb
+++ b/test/dummy/app/views/accounts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@account) do |f| %>
+<%= form_for(@account, :url => client_accounts_path(@client)) do |f| %>
   <% if @account.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@account.errors.count, "error") %> prohibited this account from being saved:</h2>
