--- a/test/dummy/app/views/accounts/index.html.erb
+++ b/test/dummy/app/views/accounts/index.html.erb
@@ -11,13 +11,13 @@
 <% @accounts.each do |account| %>
   <tr>
     <td><%= account.name %></td>
-    <td><%= link_to 'Show', account %></td>
-    <td><%= link_to 'Edit', edit_account_path(account) %></td>
-    <td><%= link_to 'Destroy', account, confirm: 'Are you sure?', method: :delete %></td>
+    <td><%= link_to 'Show', client_account_path(account.client,account) %></td>
+    <td><%= link_to 'Edit', edit_client_account_path(account.client,account) %></td>
+    <td><%= link_to 'Destroy', client_account_path(account.client,account), confirm: 'Are you sure?', method: :delete %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Account', new_account_path %>
+<%= link_to 'New Account', new_client_account_path(@client) %>
