--- a/test/dummy/app/views/mongo_accounts/edit.html.erb
+++ b/test/dummy/app/views/mongo_accounts/edit.html.erb
@@ -1,3 +1,4 @@
+<%
 # Copyright (c) 2012 Bingo Entreprenøren AS
 # Copyright (c) 2012 Teknobingo Scandinavia AS
 # Copyright (c) 2012 Knut I. Stenmark
@@ -21,30 +22,10 @@
 # LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
 # OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
 # WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+%>
+<h1>Editing account</h1>
 
-require 'trust/exceptions'
-require 'trust/inheritable_attribute'
-module Trust
-  autoload :Permissions,        'trust/permissions'
-  autoload :Controller,         'trust/controller'
-  autoload :Authorization,      'trust/authorization'
-  autoload :ActiveRecord,       'trust/active_record'
-end
-require 'trust/controller'
-class ActionController::Base
-  include Trust::Controller
-end
-if defined?(ActiveRecord)
-  class ActiveRecord::Base
-    include Trust::ActiveRecord
-  end
-end
-# always, as it may not exists yet
-module Mongoid
-  module Document
-    include Trust::ActiveRecord
-    def Document.included(base)
-      base.send(:extend,Trust::ActiveRecord::ClassMethods)
-    end
-  end
-end
+<%= render 'form' %>
+
+<%= link_to 'Show', mongo_client_mongo_account_path(@mongo_account) %> |
+<%= link_to 'Back', mongo_client_mongo_accounts_path(@mongo_client) %>
