Changed dummy tests to comply with rails 4 changes

--- a/test/dummy/app/views/accounts/edit.html.erb
+++ b/test/dummy/app/views/accounts/edit.html.erb
@@ -27,5 +27,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', client_account_path(@account) %> |
+<%= link_to 'Show', client_account_path(@client, @account) %> |
 <%= link_to 'Back', client_accounts_path(@client) %>
