--- a/test/dummy/app/views/accounts/show.html.erb
+++ b/test/dummy/app/views/accounts/show.html.erb
@@ -31,5 +31,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_client_account_path(@account) %> |
+<%= link_to 'Edit', edit_client_account_path(@client, @account) %> |
 <%= link_to 'Back', client_accounts_path(@client) %>
