--- a/test/dummy/app/views/mongo_accounts/edit.html.erb
+++ b/test/dummy/app/views/mongo_accounts/edit.html.erb
@@ -27,5 +27,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', mongo_client_mongo_account_path(@mongo_account) %> |
-<%= link_to 'Back', mongo_client_mongo_accounts_path(@mongo_client) %>
+<%= link_to 'Show', mongo_account_path(@mongo_account) %> |
+<%= link_to 'Back', :back %>
