--- a/test/dummy/app/views/mongo_accounts/show.html.erb
+++ b/test/dummy/app/views/mongo_accounts/show.html.erb
@@ -31,5 +31,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_mongo_client_mongo_account_path(@mongo_account) %> |
-<%= link_to 'Back', mongo_client_mongo_accounts_path(@mongo_client) %>
+<%= link_to 'Edit', edit_mongo_account_path(@mongo_account) %> |
+<%= link_to 'Back', :back %>
